<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/account_name_input"
        android:hint="@string/input_account_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/password_input"
        android:layout_marginTop="8dp"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@+id/account_name_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/login_button"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>