<resources>
    <string name="app_name">Awesome Social App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_account_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_failure">登录失败</string>
    <string name="chats_item_date_format">hh:mm</string>

</resources>
